# chrono

./: .editorconfig  .env.sample  .gitignore  .prettierrc  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  requirements.txt  setup.cfg
server/: .dockerignore  Dockerfile  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  worker.py
server/alembic/: env.py
server/alembic/versions/: 093305c1729e_nullable_response_status.py  1c663de078eb_add_event_creator.py  1f814424ccd9_add_user_timezone.py  295771df0e22_add_display_name_to_participant.py  2beaa41d8d45_add_email_to_calendar.py  31f0470cbca9_nullable_participant_event_id.py  36de042aa414_add_primary_and_deleted_to_calendar.py  402c7709a1c2_participant_email_could_be_null.py  4338ced04a1d_init.py  59052bb1a015_timezone_dates.py  5d1096f771a9_add_sync_token.py  654617b9b8da_store_json_for_token.py  6cb5791b0a16_add_expiration_to_webhook.py  7094228b44fd_.py  74c320e8df6d_rename_participant_email_field.py  810c61fd08bf_add_color_hex.py  82a1c8b0e171_add_hashed_password_to_user.py  88f2eeaf8eba_add_google_id.py  8a932b6aa021_add_organizer_to_event.py  8c181bcc73b6_add_contact.py  94ee8e0c03a1_event_calendar_cascade.py  9c19062303cc_add_event_permissions.py  a2403567356e_add_photo_to_contact.py  a38f7f332e15_cascade.py  a4bfb0272299_add_calendar.py  a8a0765e061d_add_original_start_to_event.py  b1a4af9c084c_add_position.py  bdec7408a5e9_remove_previous_dates.py  c0d1a3c14c2c_add_recurrences_to_event.py  c1f5c9c69ab5_init.py  c57fa0316e1b_.py  c5903796a10d_add_webhook.py  c85ac05cee03_add_provider_to_usercreds.py  ca93c78c26f2_add_participant_model.py  d4fdf3d510c8_add_index_to_recurring_event.py  d60058ebf845_events.py  d79eac5a965c_init.py  da81e6992f20_init.py  eb8a9fb3e518_add_full_dates.py  fd00debde2df_add_email_field_with_index.py  (+1 more)
server/app/: main.py
server/app/api/: router.py
server/app/api/endpoints/: authentication.py  calendars.py  contacts.py  events.py  healthcheck.py  label_rules.py  labels.py  notifications.py  sync.py  trends.py  user.py  webhooks.py  webhooks_gcal.py  websockets.py  zoom.py
server/app/api/events/: event_utils.py
server/app/api/repos/: calendar_repo.py  contact_repo.py  event_repo.py  event_utils.py  exceptions.py  user_repo.py  webhook_repo.py
server/app/api/utils/: db.py  security.py
server/app/calendar/: google.py  sync.py
server/app/classify/: classifier.py
server/app/core/: config.py  logger.py  notifications.py  websockets.py
server/app/db/: base_class.py  models.py  session.py
server/app/db/models/: __init__.py  access_control.py  calendar.py  conference_data.py  contact.py  event.py  event_calendar.py  event_label.py  event_participant.py  label.py  label_rule.py  reminder.py  user.py  user_account.py  user_calendar.py  user_credentials.py  webhook.py  zoom.py
server/app/db/repos/: acl_repo.py  calendar_repo.py  contact_repo.py  event_repo.py  event_utils.py  user_repo.py  (+1 more)
server/app/sync/: locking.py
server/app/utils/: emails.py  flags.py  redis.py  zoom.py
server/migrations/: env.py
server/migrations/versions/: 089567d0f920_initial.py  11f3a8d06d29_user_email_non_nullable.py  279656e0e4af_remove_user_reference_from_webhook.py  296218927a33_index_calendar_id_in_acl.py  3aab103d796f_add_acl.py  3ff7df5c215e_add_webhook_to_user_account.py  401dd7e2b182_add_timezones_to_user.py  475d967825ba_add_calendar_list_webhook.py  48081ab1beb4_remove_user_reference_from_user_calendar.py  59399ec324a7_add_event_location.py  5d218a7ac1a9_add_account_ref_to_contact.py  5fdcab8cb72d_add_user_default_calendar.py  6bccb069711e_add_updated_date_to_event.py  6c1cb2397340_initial_db.py  7724823cc451_add_cascades_to_user_account_calendar.py  778726ef5e7f_index_google_id.py  7a1b06c4cc03_add_event_participant_type.py  8043039b1e93_add_id_to_usercredentials.py  8295e9c9c307_add_type_to_conference_data.py  88dab2a83495_index_fks_on_reminders.py  8f1bf3908324_initial.py  95111f68d87c_add_is_default_to_credentials.py  b8b01aa085fb_add_zoom_integration_to_user.py  bc3480144b47_add_conference_data.py  bc9ab5a079f1_add_extended_properties_to_event.py  be1dec2eba9f_add_account_id_to_calendar.py  ca495e48f2c5_rm_unique_calendar_google_id.py  cff72251c08c_add_email_to_user_creds.py  d47952683ac1_add_transparency_and_visibility.py  dc52cb46b1c6_rm_timezone_from_user.py  dce6cd44ad14_add_conference_data.py  ddced1628060_initial.py  e0fbbedfde55_add_reminder.py  e100a9cda8ba_add_use_default_reminders_flag.py  f44323dbeb83_remove_google_oauth_state_from_user.py  f583776a0810_initial.py  f691b4ff68c3_add_conference_data.py  fba0882f35bc_add_conference_data.py  fc8fe8a0c2f7_add_remove_user_from_contact.py
server/tests/: conftest.py  test_session.py  utils.py
server/tests/calendar/: test_google.py
server/tests/repos/: test_calendar_repo.py  test_event_repo.py
(+352 files in other folders)
