[tool.poetry]
name = "app"
version = "0.1.0"
description = "Chrono API"
authors = ["winxton <winxton@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
fastapi = "^0.85.1"
alembic = "^1.8.1"
requests = "^2.28.1"
psycopg2-binary = "^2.9.5"
shortuuid = "^1.0.9"
google-api-python-client = "^2.66.0"
uvicorn = "^0.20.0"
oauthlib = "^3.1.0"
google-auth = "^2.9.1"
requests-oauthlib = "^1.3.0"
google-auth-oauthlib = "^0.5.2"
PyJWT = "^2.0.1"
asyncpg = "^0.27.0"
orjson = "^3.8.1"
gunicorn = "^20.1.0"
httptools = "^0.5.0"
python-dateutil = "^2.8.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
dramatiq = {version = "^1.13.0", extras = ["watch", "redis"]}
sqlalchemy = "^1.4.42"
uvloop = "^0.17.0"
hypercorn = "^0.14.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.982"
black = "^22.10.0"
pytest-asyncio = "^0.18.3"
httpx = "^0.23.0"
types-protobuf = "^3.19.22"
types-requests = "^2.28.1"
types-python-dateutil = "^2.8.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.poetry.scripts]
start = "app.main:start"
