[tool.poetry]
name = "app"
version = "0.1.0"
description = "Chrono API"
authors = ["winxton <winxton@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
fastapi = {version = "^0.108.0", extras = ["all"]}
alembic = "^1.13.1"
requests = "^2.28.1"
psycopg2-binary = "^2.9.9"
shortuuid = "^1.0.9"
google-api-python-client = "^2.113.0"
uvicorn = "^0.26.0"
oauthlib = "^3.2.2"
google-auth = "^2.26.2"
requests-oauthlib = "^1.3.1"
google-auth-oauthlib = "^1.2.0"
PyJWT = "^2.0.1"
asyncpg = "^0.29.0"
gunicorn = "^21.2.0"
httptools = "^0.5.0"
python-dateutil = "^2.8.2"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
dramatiq = {version = "1.13", extras = ["redis", "watch"]}
sqlalchemy = "^2.0.0"
uvloop = "^0.19.0"
hypercorn = "^0.16.0"
pyotp = "^2.8.0"
jinja2 = "^3.1.2"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^1.0.1"
pytest = "^7.2.0"
pytest-asyncio = "^0.18.3"
types-redis = "^4.4.0.0"
types-protobuf = "^3.19.22"
types-requests = "^2.28.1"
types-python-dateutil = "^2.8.19"
google-api-python-client-stubs = "^1.15.0"
types-passlib = "^1.7.7.3"
types-oauthlib = "^3.2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
prefer-active-python = false
path = ".venv"

[tool.poetry.scripts]
start = "app.main:start"

[[tool.mypy.overrides]]
module = "google.oauth2.credentials.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google_auth_oauthlib.flow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_oauthlib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py36']  # Use the Python version of your project
skip-string-normalization = true  # Skip string normalization
